// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sparkline chart rendering Should re-render the Sparkline chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_SparklineChart_empty4"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Sparkline chart rendering Should re-render the Sparkline chart with data 2`] = `
<div>
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          display: inline;
        }
    data-focuszone-id="FocusZone5"
  >
    <div
      class=

          {
            display: inline;
          }
    >
      <svg
        data-is-focusable="true"
        height="20"
        tabindex="0"
        width="80"
      />
    </div>
  </div>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    />
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    >
      <text
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #000000;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
            }
        dx={8}
        dy={-5}
        x="0%"
        y="100%"
      >
        19.64
      </text>
    </svg>
  </div>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly with no legend 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone1"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    />
  </div>
</div>
`;
